# WolfBench

./: .gitignore  README.md  pyproject.toml
AuthorKit27/: AnonymousSubmission2027.aux  AnonymousSubmission2027.blg  AnonymousSubmission2027.tex
__MACOSX/AuthorKit27/: ._AnonymousSubmission2027.aux
docs/: calibration_audit.md  iclr_evidence_package.md  theory_scaling_model.md
experiments/: _common.py  analyze_qwen_baseline.py  calibrate_alpha_grid.py  exp1_alpha_scaling.py  exp2_society_size_scaling.py  exp3_centrality_placement.py  exp4_feedback_ablation.py  exp5_wolfguard_defense.py  exp6_defense_leaderboard.py  paper_figures.py  paper_killer_figure1.py  paper_required_figures.py  run_all.py
experiments/defense_benchmark/: __init__.py  analyze_qwen_baseline.py  calibrate_alpha_grid.py  exp5_wolfguard_defense.py  exp6_defense_leaderboard.py  exp7_threshold_shift_defense.py  run_all.py
experiments/scaling_theory/: __init__.py  _threshold.py  analyze_scaling_law.py  exp10_comparative_statics_threshold.py  exp11_scenario_law_audit.py  exp12_canonical_scaling.py  exp12_merge_refinements.py  exp12_paper_figures.py  exp12_s2_s3_smooth_refinement.py  exp1_alpha_scaling.py  exp2_society_size_scaling.py  exp3_centrality_placement.py  exp4_feedback_ablation.py  exp5_capacity_control.py  exp6_llm_n200_scaling.py  exp7_cross_mechanism_threshold.py  exp8_sensitivity_audit.py  run_all.py  (+1 more)
outputs/: paper_profile_analysis.md  paper_profile_run_status.md
tests/: test_defense_score.py  test_llm.py  test_scaling_metrics.py  test_smoke.py  test_trajectory_distilled.py
(+344 files in other folders)
