[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolfbench"
version = "0.1.0"
description = "WolfBench: A Case-Grounded Financial MAS Safety Benchmark for Harmful Agent Scaling"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "tqdm>=4.65",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1"]
plot = ["matplotlib>=3.7", "seaborn>=0.12"]

[project.scripts]
wolfbench = "wolfbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wolfbench = ["config/**/*.yaml"]
